--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Fleur+De+Leah&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap'); */
 
 :root{
     --primaryColor:rgb(230, 83, 60);
@@ -16,6 +18,17 @@ body{
     font-family: "Inter", sans-serif;
     max-width: 1440px;
     margin: 0 auto;
+}
+
+/* common Shared style */
+.primary-btn{
+    padding: 14px 36px;
+    background-color: var(--primaryColor);
+    border-radius: 37px;
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--largeText);
+    border: none;
 }
 
 /* Header Section Style */
@@ -58,4 +71,116 @@ header{
     color: var(--largeText);
     font-size: 24px;
     display: none;
+}
+
+main{
+    max-width: 1169px;
+    margin: auto;
+}
+/* Banner Section Starts here */
+.banner-content{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 50px;
+      /* border: 1px solid sandybrown; */
+}
+.banner-text-content{
+    width: 45%;
+    margin: auto;
+    /* border: 1px solid green; */
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+.banner-title{
+    font-size: 70px;
+    font-weight: 900;
+    color: var(--largeText);
+    line-height: 80px;
+}
+
+#banner-inner-text{
+    font-family: "Fleur De Leah", cursive;
+    font-weight: 400;
+    font-size: 100px;
+}
+.banner-description{
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--smallText);
+}
+
+.btn-download{
+    background: rgb(17, 17, 17);
+    padding: 14px 36px;
+    border-radius: 37px;
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--largeText);
+    border: 1px solid rgb(255, 255, 255);
+    margin-left: 14px;
+}
+.banner-img-content{
+    width: 48%;
+    display: flex;
+    justify-content: end;
+    /* border: 1px solid tomato; */
+    position: relative;
+}
+.banner-img-content img{
+    object-fit: cover;
+}
+.workout-videos{
+    width: 160px;
+    height: 80px;
+    background: rgba(255, 255, 255, 0.1);
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 12px;
+    position: absolute;
+    top:150px;
+    right: -50px;
+
+}
+
+.workout-videos-2{
+    width: 160px;
+    height: 80px;
+    background: rgba(255, 255, 255, 0.1);
+    display:flex;
+    /* flex-direction: column; */
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 12px;
+    position: absolute;
+    left:150px;
+    bottom: 100px;
+
+}
+.banner-img-box-1{
+    color: var(--largeText);
+    font-size: 26px;
+    font-weight: 900;
+    
+}
+.banner-img-box-3{
+    color: var(--largeText);
+    font-size: 24px;
+    font-weight: 900;
+    display: block;
+    
+}
+.banner-img-box-2{
+    font-size: 14px;
+    font-weight: 400;
+    color: var(--smallText);
+
+}
+.play-btn{
+    font-size: 28px;
+    color: var(--primaryColor);
+    margin-right: 10px;
 }
