--- a/style/style.css
+++ b/style/style.css
@@ -30,6 +30,16 @@ body{
     color: var(--largeText);
     border: none;
 }
+.section-title{
+    font-size: 42px;
+    font-weight: 900;
+    color: var(--largeText);
+}
+.section-description{
+    font-size: 14px;
+    font-weight: 400;
+    color: var(--smallText);
+}
 
 /* Header Section Style */
 header{
@@ -184,3 +194,50 @@ main{
     color: var(--primaryColor);
     margin-right: 10px;
 }
+
+/* Change Your Habits section */
+.change-habit-container{
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+.change-habit-text-content{
+    width: 50%;
+    margin: auto;
+    text-align: center;
+}
+
+.change-habit-img-container{
+    width: 80%;
+    margin: auto;
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    
+}
+
+.img-box img{
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.img-box .img-title{
+    font-size: 16px;
+    font-weight: 900;
+    color: var(--largeText);
+    text-align: center;
+    margin-top: 30px;
+}
+
+.img-box .img-description{
+    font-size: 14px;
+    font-weight: 400;
+    color: var(--smallText);
+    text-align: center;
+    margin-top: 6px;
+}
+
