--- a/style/responsive.css
+++ b/style/responsive.css
@@ -72,6 +72,30 @@
     width: 70%;
     margin: auto;
    }
+
+   /* Run Extra Mile Easily */
+   .run-extra-mile-container{
+    flex-direction: column;
+    /* width: 80%; */
+   }
+
+   .run-extra-text-content{
+    width: 80%;
+    /* margin: 30px 0 30px 30px; */
+}
+
+.run-extra-img-content{
+    width: 80%;
+    /* margin: 20px 30px; */
+}
+
+.run-extra-mile-btn-content{
+    text-align: center;
+}
+.run-extra-mile-btn-content button{
+    width: 90%;
+}
+
 }
 
 /* Responsive for Tab */
@@ -143,6 +167,31 @@
         margin: auto;
        }
        
+       /* Run Extra Mile */
+    
+       .run-extra-text-content{
+        width: 40%;
+        /* margin: 30px 0 30px 30px; */
+    }
+    
+    .run-extra-img-content{
+        /* width: 60%; */
+        width: 230px;
+        height: 287px;
+        /* margin: 20px 30px; */
+    }
+    .run-extra-img-content img{
+        width: 100%;
+        height: 100%;
+        object-fit:cover;
+    }
+    
+    .run-extra-mile-btn-content{
+        text-align: center;
+    }
+    .run-extra-mile-btn-content button{
+        width: 60%;
+    }
 
 }
 
