--- a/style/responsive.css
+++ b/style/responsive.css
@@ -96,6 +96,75 @@
     width: 90%;
 }
 
+
+/* Training and Exercises */
+.Exercise-section{
+    width: 95%;
+    margin: auto;
+}
+.Exercise-section>p{
+    width: 90%;
+}
+.training-img-container{
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    background: white;
+    margin-top: 50px;
+  }
+.training-img-box-1{
+    grid-column: 1/span 4;
+    
+}
+
+
+.training-img-box-2{
+    grid-column: 5/span 4;
+   
+}
+
+
+.training-img-box-3{
+    grid-column: 9/span 3;
+    display: none;
+  
+}
+.training-img-box-3>div>p{
+    width: 100%;
+}
+
+.training-img-box-4{
+    grid-column: 1/span 4;
+    
+}
+
+.training-img-box-4>div>p{
+    width: 90%;
+}
+
+.training-img-box-5{
+    grid-column: 5/span 4;
+   
+}
+
+.training-img-box-5>div>p{
+    width: 90%;
+}
+
+.training-img-box-6{
+    grid-column: 8/span 4;
+    display: none;
+}
+
+
+.training-img-box-6>div>p{
+    color: white;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    width: 90%;
+}
+
 }
 
 /* Responsive for Tab */
@@ -193,6 +262,71 @@
         width: 60%;
     }
 
+    /* Training and Exercises */
+.Exercise-section{
+    width: 95%;
+    margin: auto;
+}
+
+.training-img-container{
+    display: grid;
+    grid-template-columns: repeat(11, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    background: white;
+    margin-top: 50px;
+  }
+.training-img-box-1{
+    grid-column: 1/span 3;
+    
+}
+
+
+.training-img-box-2{
+    grid-column: 4/span 5;
+   
+}
+
+
+.training-img-box-3{
+    grid-column: 9/span 3;
+  
+}
+.training-img-box-3>div>p{
+    width: 100%;
+}
+
+.training-img-box-4{
+    grid-column: 1/span 4;
+    
+}
+
+.training-img-box-4>div>p{
+    width: 80%;
+}
+
+.training-img-box-5{
+    grid-column: 5/span 3;
+   
+}
+
+.training-img-box-5>div>p{
+    width: 90%;
+}
+
+.training-img-box-6{
+    grid-column: 8/span 4;
+    
+}
+
+
+.training-img-box-6>div>p{
+    color: white;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    width: 90%;
+}
+
 }
 
 /* This Responsive for 769px to 1168px */
@@ -218,5 +352,10 @@
    .section-title{
     margin-bottom: 10px;
    }
+
+   .Exercise-section{
+    width: 95%;
+    margin: auto;
+}
     
 }
