--- a/style/style.css
+++ b/style/style.css
@@ -272,3 +272,144 @@ main{
     margin-top: 20px;
 }
 
+
+/* Training and Exercises */
+
+.Exercise-section>p{
+    width: 50%;
+}
+.training-img-container{
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  background: white;
+  margin-top: 50px;
+}
+
+.training-img-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    fill-opacity: var(--primaryColor);
+    
+}
+
+.training-img-box-1{
+    grid-column: 1/span 3;
+    position: relative;
+}
+.training-img-box-1>div{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: rgba(6, 255, 210, 0.3);
+    color: black;
+    top:0;
+    left: 0;
+    opacity: 0.5;
+}
+.training-img-box-1>div>p{
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+}
+.training-img-box-2{
+    grid-column: 4/span 6;
+    position: relative;
+}
+.training-img-box-2>div{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgb(255, 0, 0,0.3);
+    /* opacity: 0.6; */
+}
+.training-img-box-2>div>p{
+  color: white;
+  position: absolute;
+  top: 30px;
+  left: 30px;
+}
+.training-img-box-3{
+    grid-column: 10/span 3;
+    position: relative;
+}
+.training-img-box-3>div{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgb(0, 0, 0,0.3);
+   
+}
+.training-img-box-3>div>p{
+    color:rgb(255, 255, 247);
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+   width: 60%;
+   
+}
+.training-img-box-4{
+    grid-column: 1/span 5;
+    position: relative;
+}
+.training-img-box-4>div{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgb(0,0,0,0.3);
+    
+}
+.training-img-box-4>div>p{
+    color: white;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 40%;
+}
+.training-img-box-5{
+    grid-column: 6/span 3;
+    position: relative;
+}
+.training-img-box-5>div{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgb(66,255,0,0.3);
+}
+.training-img-box-5>div>p{
+    color:white;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    width: 60%;
+}
+
+.training-img-box-6{
+    grid-column: 9/span 4;
+    position: relative;
+}
+.training-img-box-6>div{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgb(0,71,255,0.3);
+}
+.training-img-box-6>div>p{
+    color: white;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    width: 60%;
+}
+
